--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         #chart{
             width: 450px;
         }
+        #validate{
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -36,6 +39,7 @@
         <h1 class="titleField">choose a Walmart Store Number to get the chart</h1>
         <p>note : if the number is out of the range (1 to 45 ) you will see the overall plot of all the stores</p>
         <input type="number" id="numberIn" required placeholder="Select store number from 1 to 45">
+        <button id="validate"> validate</button>
     </div>
     
     <div id="myChart">
